--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,25 +4,89 @@
     <title>Booker2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
+    <header>
+      <nav class ="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class = "container">
+              <a class = "navbar-brand" href = "/">
+                  <span>Bookers</span>
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
+                  <ul class="navbar-nav ml-auto">
+                    <% if user_signed_in? %>
+                      <li>
+                         <%= link_to user_path(current_user.id) do %>
+                        <i class="fas fa-home nav-link text-light" > Home </i>
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to users_path do %>
+                         <i class="fas fa-users nav-link text-light"> Users </i>
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to books_path do %>
+                         <i class="fas fa-book-open nav-link text-light"> Books </i>
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to destroy_user_session_path, method: :delete do %>
+                         <i class="fas fa-sign-out-alt nav-link text-light"> logout </i>
+                        <% end %>
+                      </li>
+                    <% else %>
+                      <li>
+                        <%= link_to root_path do %>
+                         <i class="fas fa-home nav-link text-light" > Home </i>
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to home_about_path do %>
+                         <i class="fas fa-link nav-link text-light" > About </i>
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to new_user_registration_path do %>
+                         <i class="fas fa-user-plus nav-link text-light" > sign up </i>
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to new_user_session_path do %>
+                         <i class="fas fa-sign-in-alt nav-link text-light" > login </i>
+                        <% end %>
+                      </li>
+                    <% end %>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+    </header>
+    <div class = "text-success" >
+     <p id="notice"><%= notice %></p>
+    </div>
     
-    <%= yield %>
+       <%= yield %>
+      
+
+    <footer>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="mx-auto">
+                    <p>CopyRight Infratop.inc</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
   </body>
 </html>
