--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,16 +27,16 @@
                   <td><%= book.body %></td>
                   <td>
                     <% if book.favorited_by?(current_user) %>
-                      <%= link_to favorites_path(book), method: :delete do %>
+                      <%= link_to book_favorites_path(book), method: :delete do %>
                       ♥<%= book.favorites.count %>
                       <% end %>
                     <% else %>
-                     <%= link_to favorites_path(book), method: :post do %>
+                     <%= link_to book_favorites_path(book), method: :post do %>
                       ♡<%= book.favorites.count %>
                     <% end %>
                     <% end %>
                   </td>
-                  
+
                 </tr>
                 <% end %>
               </tbody>
