--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,17 @@
               </td>
               <td> <%= link_to@bookfind.title %> </td>
               <td> <%= @bookfind.body %> </td>
+              <td>
+                <% if @bookfind.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(@bookfind), method: :delete do %>
+                ♥<%= @bookfind.favorites.count %>
+                <% end %>
+                <% else %>
+                <%= link_to book_favorites_path(@bookfind), method: :post do %>
+                ♡<%= @bookfind.favorites.count %>
+                <% end %>
+                <% end %>
+              </td>
               <% if @bookfind.user_id == current_user.id %>
               <td> <%= link_to "Edit", edit_book_path(@bookfind), class:"btn btn-success"%> </td>
               <td> <%= link_to "Destroy", book_path(@bookfind), method: :delete, data: {confirm: "本当に消しますか？"}, class:"btn btn-danger" %> </td>
