--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,7 +36,7 @@
                     <% end %>
                     <% end %>
                   </td>
-
+                  <td>コメント数: <%= book.book_comment.count %></td>
                 </tr>
                 <% end %>
               </tbody>
