--- a/app/views/books/_user.html.erb
+++ b/app/views/books/_user.html.erb
@@ -1,45 +1,71 @@
   <div class = "text-danger" >
-  
-    <% if @book.errors.any? %>
-    <h3> <%= @book.errors.count %> error prohibited this obj from being saved: </h3>
-    <% @book.errors.full_messages.each do |message| %>
+
+    <% if book.errors.any? %>
+    <h3> <%= book.errors.count %> error prohibited this obj from being saved: </h3>
+    <% book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
     <% end %>
     <% end %>
   </div>
-          
+
     <h2>User info</h2>
     <table class="table">
       <tbody>
         <tr>
-        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format:"jpeg", fallback: "no_image.jpg" %>
+        <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format:"jpeg", fallback: "no_image.jpg" %>
         </tr>
         <tr>
           <th>name</th>
-          <th><%= @user.name %></th>
+          <th><%= user.name %></th>
         </tr>
         <tr>
           <th>introduction</th>
-          <th><%= @user.introduction %></th>
+          <th><%= user.introduction %></th>
+        </tr>
+        <tr>
+          <th>follows</th>
+          <th><%= link_to user.followings.count, user_followings_path(user) %></th>
+        </tr>
+        <tr>
+          <th>followers</th>
+          <th><%= link_to user.followers.count, user_followers_path(user) %></th>
+        </tr>
+        <tr>
+          <th colspan=2>
+            <% if current_user != user %>
+              <% if current_user.following?(user) %>
+                <%= link_to "フォローを外す", user_relationships_path(user), method: :delete, class: "btn btn-primary" %>
+              <% else %>
+                <%= link_to "フォローする", user_relationships_path(user), method: :post, class: "btn btn-success" %>
+              <% end %>
+            <% else %>
+              <%= link_to edit_user_path(user.id) do %>
+              <button class = "btn btn-outline-secondary btn-block">
+               <i class = " fas fa-user-cog" ></i>
+              </button>
+            <% end %>
+            <% end %>
+          </th>
+        </tr>
+        <tr>
+          <th colspan=2>
+          <div>
+            <h2 class="mt-3">New book</h2>
+            <%= form_with model: book, local:true do |f| %>
+            <div class = "form-group">
+              <p>Title</p>
+              <%= f.text_field :title %>
+              <p>Opinion</p>
+              <%= f.text_area :body %>
+              <%= f.submit "Create Book", class: 'btn btn-success' %>
+            <% end %>
+            </div>
+          </div>
+          </th>
         </tr>
       </tbody>
     </table>
-
-    <div class="row">
-      <%= link_to edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block', method: :get do %>
-       <i class="fas fa-user-cog"></i>
-      <% end %>
-
-      </div>
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book, local:true do |f| %>
-      <div class = "form-group">
-          <p>Title</p>
-          <%= f.text_field :title %>
-          <p>Opinion</p>
-          <%= f.text_area :body %>
-          
-          <%= f.submit "Create Book", class: 'btn btn-success' %>
-          <% end %>
-      </div>
-    </div>
+ 
+      
+      
+    
