--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,9 +4,10 @@
       <div class="row">
         <div class="col-md-3">
 
-         <%= render "user" %>
-
-          <div class="col-md-8 offset-md-1">
+         <%= render "user", user: @user, book: @book %>
+         
+        </div>
+        <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
             <table class="table table-hover table-inverse">
               <thead>
@@ -41,7 +42,6 @@
                 <% end %>
               </tbody>
             </table>
-          </div>
         </div>
       </div>
     </div>
