--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,9 +3,8 @@
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3">
-
-        <%= render "user" %>
-
+        <%= render "user", user: @user, book: @book %>
+      </div>
         <div class="col-md-8 offset-md-1">
           <h2>Book detail</h2>
           <table class="table">
@@ -43,19 +42,24 @@
           </table>
           <div class = "comment">
           　<table>
-          　  <tr>
-                <% @bookfind.book_comment.each do |comment| %>
-                <% book_comment_user = comment.user %>
-                <td>
-                 <%= attachment_image_tag comment.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg"%>
-                 <p> <%= link_to comment.user.name, user_path(comment.user) %></p>
-                </td>
-                <td> <%= comment.comment %> </td>
-                <% if current_user == book_comment_user %>
-              	<td><%= link_to 'Destroy', book_book_comment_path(comment.book_id, comment.id), class: 'btn-sm btn-danger', method: :delete %></td>
-    	          <% end %>
-                <% end %>
-              </tr>
+          　  <tbody>
+            　  <tr>
+                  <% @bookfind.book_comment.each do |comment| %>
+                  <% book_comment_user = comment.user %>
+                  
+                   <td><%= attachment_image_tag comment.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg"%>
+                     <br> <%= link_to comment.user.name, user_path(comment.user) %>
+                   </td>
+                  
+                   <td> <%= comment.comment %> </td>
+                   <td>
+                     <% if current_user == book_comment_user %>
+                   	 <%= link_to 'Destroy', book_book_comment_path(comment.book_id, comment.id), class: 'btn-sm btn-danger', method: :delete %>
+                   </td>
+        	          <% end %>
+                    <% end %>
+                </tr>
+              </tbody>
           　</table>
           </div>
           <div class = "text-danger" >
@@ -71,7 +75,7 @@
             </div>
 
         </div>
-      </div>
+      
     </div>
   </div>
 </main>
