--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <script src="https://kit.fontawesome.com/846ce04829.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -25,9 +26,9 @@
                   <ul class="navbar-nav ml-auto">
                     <% if user_signed_in? %>
                       <li>
-                         <%= link_to user_path(current_user.id) do %>
-                        <i class="fas fa-home nav-link text-light" > Home </i>
-                        <% end %>
+                         <%= link_to "home", user_path(current_user.id), class: "fas fa-home nav-link text-light"  %>
+                        
+                       
                       </li>
                       <li>
                         <%= link_to users_path do %>
