--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,8 @@
     <div class="container px-5 px-sm-0">
       <div class="row">
         <div class="col-md-3">
-          <%= render "books/user" %>
+          <%= render "books/user", user: @user, book: @book %>
+        </div>
           <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
             <table class="table table-hover table-inverse">
@@ -32,6 +33,5 @@
             </table>
           </div>
         </div>
-      </div>
     </div>
 </main>
