--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,79 +15,70 @@
   <body>
     <header>
       <nav class ="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class = "container">
-              <a class = "navbar-brand" href = "/">
-                  <span>Bookers</span>
-              </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
-                  <ul class="navbar-nav ml-auto">
-                    <% if user_signed_in? %>
-                      <li>
-                         <%= link_to "home", user_path(current_user.id), class: "fas fa-home nav-link text-light"  %>
-                        
-                       
-                      </li>
-                      <li>
-                        <%= link_to users_path do %>
-                         <i class="fas fa-users nav-link text-light"> Users </i>
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to books_path do %>
-                         <i class="fas fa-book-open nav-link text-light"> Books </i>
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to destroy_user_session_path, method: :delete do %>
-                         <i class="fas fa-sign-out-alt nav-link text-light"> logout </i>
-                        <% end %>
-                      </li>
-                    <% else %>
-                      <li>
-                        <%= link_to root_path do %>
-                         <i class="fas fa-home nav-link text-light" > Home </i>
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to home_about_path do %>
-                         <i class="fas fa-link nav-link text-light" > About </i>
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to new_user_registration_path do %>
-                         <i class="fas fa-user-plus nav-link text-light" > sign up </i>
-                        <% end %>
-                      </li>
-                      <li>
-                        <%= link_to new_user_session_path do %>
-                         <i class="fas fa-sign-in-alt nav-link text-light" > login </i>
-                        <% end %>
-                      </li>
-                    <% end %>
-                  </ul>
-              </div>
+        <div class = "container">
+          <%= link_to "Bookers", root_path, class: "navbar-brand" %>
+          <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+              <li>
+               <%= link_to " home", user_path(current_user.id), class: "fas fa-home nav-link text-light"  %>
+              </li>
+              <li>
+                <%= link_to " Users", users_path, class: "fas fa-users nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " Books", books_path, class: "fas fa-book-open nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " Logout", destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %>
+              </li>
+              <% else %>
+              <li>
+                <%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " About", home_about_path, class: "fas fa-link nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to " login", new_user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+              </li>
+              <% end %>
+            </ul>
           </div>
+        </div>
       </nav>
     </header>
+
     <div class = "text-success" >
      <p id="notice"><%= notice %></p>
     </div>
-    
-       <%= yield %>
-      
+
+    <div class="row">
+      <div class="text-center col-12">
+        <% if user_signed_in? %>
+          <%= form_with url:searches_search_path, method: :get, local: true do |f| %>
+            <%= f.text_field 'search[value]' %>
+            <%= f.select 'search[model]', options_for_select({ "User" => "user", "Book" => "book" }) %>
+            <%= f.select 'search[how]', options_for_select({ "完全一致" => "match", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partical"  }) %>
+            <%= f.submit :"検索" %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+
+    <%= yield %>
 
     <footer>
-        <div class="container mt-5">
-            <div class="row">
-                <div class="mx-auto">
-                    <p>CopyRight Infratop.inc</p>
-                </div>
-            </div>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
         </div>
+      </div>
     </footer>
-
   </body>
 </html>
