--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,23 +1,31 @@
-<h2>Follower Users</h2>
-<% if @users.exists? %>
-  <table>
-    <thead>
-      <tr>
-        <th>name</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= user.name %></td>
-          <td>フォロー数: <%= user.followings.count %></td>
-          <td>フォロワー数: <%= user.followers.count %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <% else %>
-    <p>ユーザーはいません</p>
-  <% end %>
+<main>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Follower Users</h2>
+        <% if @users.exists? %>
+          <table>
+            <thead>
+              <tr>
+                <th>name</th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <td><%= user.name %></td>
+                  <td>フォロー数: <%= user.followings.count %></td>
+                  <td>フォロワー数: <%= user.followers.count %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <p>ユーザーはいません</p>
+        <% end %>
+      </div> 
+    </div>  
+  </div>
+</main>
