--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,24 +1,32 @@
-<h2>Follow Users</h2>
-<% if @users.exists? %>
-  <table>
-    <thead>
-      <tr>
-        <th>image</th>
-        <th>name</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format:"jpeg", fallback: "no_image.jpg" %></td>
-          <td><%= user.name %></td>
-          <td>フォロー数: <%= user.followings.count %></td>
-          <td>フォロワー数: <%= user.followers.count %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% else %>
-  <p>ユーザーはいません</p>
-<% end %>
+<main>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <div class="col-md-">
+        <h2>Follow Users</h2>
+        <% if @users.exists? %>
+          <table>
+            <thead>
+              <tr>
+                <th>image</th>
+                <th>name</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format:"jpeg", fallback: "no_image.jpg" %></td>
+                  <td><%= user.name %></td>
+                  <td>フォロー数: <%= user.followings.count %></td>
+                  <td>フォロワー数: <%= user.followers.count %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% else %>
+          <p>ユーザーはいません</p>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</main>
