--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,37 +1,34 @@
 <main>
-    <p id="notice"></p>
-    <div class="container px-5 px-sm-0">
-      <div class="row">
-        <div class="col-md-3">
-          <%= render "books/user", user: @user, book: @book %>
-        </div>
-          <div class="col-md-8 offset-md-1">
-            <h2>Books</h2>
-            <table class="table table-hover table-inverse">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>Title</th>
-                  <th>opinion</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @user.books.each do |book| %>
-                <tr>
-                  <td><%= link_to user_path(@user) do %>
-                  <% end %>
-                  </td>
-                  <td><%= link_to book_path(book) do %>
-                  <%= book.title %>
-                  <% end %>
-                  </td>
-                  <td><%= book.body %>
-                  </td>
-                </tr>
-                <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
+  <p id="notice"></p>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      
+      <div class="col-md-3">
+        <%= render "books/user", user: @user, book: @book %>
+      </div>
+      
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>opinion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @user.books.each do |book| %>
+              <tr>
+                <td> <%= link_to "", user_path(@user) %> </td>
+                <td> <%= link_to book.title, book_path(book) %> </td>
+                <td> <%= book.body %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      
     </div>
+  </div>
 </main>
