--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
         <div class="col-md-3">
 
          <%= render "user", user: @user, book: @book %>
-         
+
         </div>
         <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
@@ -26,16 +26,8 @@
 
                   <td><%= link_to book.title, book_path(book.id) %></td>
                   <td><%= book.body %></td>
-                  <td>
-                    <% if book.favorited_by?(current_user) %>
-                      <%= link_to book_favorites_path(book), method: :delete do %>
-                      ♥<%= book.favorites.count %>
-                      <% end %>
-                    <% else %>
-                     <%= link_to book_favorites_path(book), method: :post do %>
-                      ♡<%= book.favorites.count %>
-                    <% end %>
-                    <% end %>
+                  <td id = "favorite-btn-<%= book.id %>" >
+                    <%= render "favorites/favoritbutton", book: book %>
                   </td>
                   <td>コメント数: <%= book.book_comment.count %></td>
                 </tr>
