--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,11 +2,11 @@
   <p id="notice"></p>
   <div class="container px-5 px-sm-0">
     <div class="row">
-      
+
       <div class="col-md-3">
         <%= render "user", user: @user, book: @book %>
       </div>
-      
+
       <div class="col-md-8 offset-md-1">
         <h2>Book detail</h2>
         <table class="table">
@@ -18,21 +18,13 @@
               <td> <%= link_to@bookfind.title %> </td>
               <td> <%= @bookfind.body %> </td>
               <td>
-                <div class = "favorite">
-                  <% if @bookfind.favorited_by?(current_user) %>
-                    <%= link_to book_favorites_path(@bookfind), method: :delete do %>
-                      ♥<%= @bookfind.favorites.count %>
-                    <% end %>
-                  <% else %>
-                    <%= link_to book_favorites_path(@bookfind), method: :post do %>
-                      ♡<%= @bookfind.favorites.count %>
-                    <% end %>
-                  <% end %>
+                <div class = "favoritbutton" id = "favorite-btn-<%= @bookfind.id %>" >
+                  <%= render "favorites/favoritbutton", book: @bookfind %>
                 </div>
               </td>
               <td>
                 <div class = "comment-count">
-                  コメント数: <%= @bookfind.book_comment.count %>
+                  <%= render "commentcount", bookfind: @bookfind %>
                 </div>
               </td>
               <% if @bookfind.user_id == current_user.id %>
@@ -42,35 +34,21 @@
             </tr>
           </tbody>
         </table>
+
         <div class = "comment">
-        　<table>
-        　  <tbody>
-              <tr>
-                <% @bookfind.book_comment.each do |comment| %>
-                  <% book_comment_user = comment.user %>
-                  <td><%= attachment_image_tag comment.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg"%>
-                    <br> <%= link_to comment.user.name, user_path(comment.user) %> </br>
-                  </td>
-                  <td> <%= comment.comment %> </td>
-                  <td>
-                    <% if current_user == book_comment_user %>
-                      <%= link_to 'Destroy', book_book_comment_path(comment.book_id, comment.id), class: 'btn-sm btn-danger', method: :delete %>
-                    <% end %>
-                  </td>
-                <% end %>
-              </tr>
-            </tbody>
-        　</table>
+          <div class = "comment-index">
+            <%= render "book_comment/index", bookfind: @bookfind %>
+          </div>
         </div>
-        
+
         <div class = "text-danger" >
           <% @book_new_comment.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </div>
-        
-        <div class = "new-comments">
-          <%= form_with(model:[@bookfind, @book_new_comment], url: book_book_comment_index_path(@bookfind.id), local: true) do |f| %>
+
+        <div class = "new-comments" >
+          <%= form_with(model:[@bookfind, @book_new_comment], url: book_book_comment_index_path(@bookfind.id)) do |f| %>
             <%= f.text_area :comment, placeholder:"コメントを入力してください", class: "form-control" %>
             <P> <%= f.submit "コメントを送信する", class: "my-1" %> </P>
           <% end %>
