--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container px-5 px-sm-0">
       <div class="row">
         <div class="col-md-3">
-
+         <!--部分テンプレート-->
          <%= render "user", user: @user, book: @book %>
 
         </div>
